# ctc-discrete-monodromy

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  requirements.txt
docs/: README.md  appendix_energy_conditions.tex  appendix_tensor_components.tex  backreaction_bounds.tex  derived_equations.tex  derived_equations_summary.tex  energy_conditions_derived.tex  energy_conditions_summary.tex  iopjournal.cls  paper.tex  references.bib  softwarex-osp-template.tex
docs/figures/: .gitkeep
scripts/: derive_tensors.py  plot_spacetime_diagrams.py  tensor_core.py  verify_energy_conditions.py
src/: lib.rs  main.rs
src/algebra/: christoffel.rs  invariants.rs  metric.rs  metric_numeric.rs  metric_profiles.rs  mod.rs
src/dynamics/: bvp.rs  geodesic.rs  mod.rs  monodromy.rs  novikov.rs
src/energy/: conditions.rs  mod.rs  stress_energy.rs
src/tests/: monodromy_test.rs  novikov_test.rs
